--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,3 @@
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS=src test OTFAnalysis CPwithPytia8 HTTAnalysis HZZAnalysis
+SUBDIRS=src test OTFAnalysis CPwithPytia8 HTTAnalysis HH2B2MuAnalysis
