--- a/HH2B2MuAnalysis/hh_2BMu_MB.ini
+++ b/HH2B2MuAnalysis/hh_2BMu_MB.ini
@@ -3,8 +3,10 @@ eventsToPrint =   1
 eventsToAnalyze = -1
 threads = 4
 
-dataPath = /home/mbluj/work/data/Ntuples/MM/
-inputFiles = MM_SingleMuonRun2016B03Feb2017_ver2-v2_4Mu_v5.root, MM_SingleMuonRun2016C03Feb2017-v1_4Mu_v5.root, MM_SingleMuonRun2016E03Feb2017-v1_4Mu_v5.root, MM_SingleMuonRun2016G03Feb2017-v1_4Mu_v5.root, MM_SingleMuonRun2016H03Feb2017_ver3-v1_4Mu_v5.root, MM_SingleMuonRun2016D03Feb2017-v1_4Mu_v5.root, MM_SingleMuonRun2016F03Feb2017-v1_4Mu_v5.root, MM_SingleMuonRun2016H03Feb2017_ver2-v1_4Mu_v5.root
+NTUPLES_17_05_2017/MM/MM_SingleMuonRun2016*
+
+dataPath = /home/mbluj/work/data/Ntuples/NTUPLES_17_05_2017/
+inputFiles = MM_SingleMuonRun2016B03Feb2017_ver2-v2_v7_SM.root, MM_SingleMuonRun2016C03Feb2017-v1_v7_SM.root, MM_SingleMuonRun2016D03Feb2017-v1_v7_SM.root, MM_SingleMuonRun2016E03Feb2017-v1_v7_SM.root, MM_SingleMuonRun2016F03Feb2017-v1_v7_SM.root, MM_SingleMuonRun2016G03Feb2017-v1_v7_SM.root, MM_SingleMuonRun2016H03Feb2017_ver2-v1_v7_SM.root, MM_SingleMuonRun2016H03Feb2017_ver3-v1_v7_SM.root
 
 processName = AnalysisHH
 
