Adapt HTTAnalysis to inputs from NanoAOD; nothing except the synch analyzer tested.

--- a/HTTAnalysis/htt_synch_TT.ini
+++ b/HTTAnalysis/htt_synch_TT.ini
@@ -3,8 +3,9 @@ eventsToPrint = 0
 eventsToAnalyze = -1
 threads = 1
 
-dataPath = /scratch_local/akalinow/CMS/HiggsCP/Data/NTUPLES_03_03_2017/TT
-inputFiles = TT_VBFHToTauTauM12513TeV_v94.root, 
+dataPath = /home/mbluj/work/CMSSW/CMSSW_9_4_2_fromNano/src/WawTools/NanoAODTools
+inputFiles = HTTTT_test80X_NANO_1.root, HTTTT_test80X_NANO_2.root, HTTTT_test80X_NANO_3.root, HTTTT_test80X_NANO_4.root, HTTTT_test80X_NANO_5.root, HTTTT_test80X_NANO_6.root,
+
 
 processName = SynchTT
 
