--- a/HTTAnalysis/htt_synch_MuTau.ini
+++ b/HTTAnalysis/htt_synch_MuTau.ini
@@ -3,8 +3,8 @@ eventsToPrint =   1
 eventsToAnalyze = -1
 threads = 1
 
-dataPath = /scratch_local/akalinow/CMS/HiggsCP/Data/NTUPLES_03_03_2017/MT
-inputFiles = MT_VBFHToTauTauM12513TeV_v94.root, 
+dataPath = /home/mbluj/work/CMSSW/CMSSW_9_4_2_fromNano/src/WawTools/NanoAODTools
+inputFiles = HTTMT_test80X_NANO_1.root, HTTMT_test80X_NANO_2.root, HTTMT_test80X_NANO_3.root, HTTMT_test80X_NANO_4.root, HTTMT_test80X_NANO_5.root, HTTMT_test80X_NANO_6.root, 
 
 processName = SynchMuTau
 
